# tako

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.agent/: README.md  activeContext.md  architecture.md  concept.md  conventions.md  manual-checks.md  orchestrator-design.md  orchestrator.md  progress-archive.md  progress.md  requirements.md  roadmap.md  threat-model-remote.md
.agent/investigations/: issue-258-memory-audit.md  issue-258-memory-validation.md  issue-262-setup-ux.md  tailscale-serve-poc.md
.agent/plans/: 2026-07-code-runner.md  2026-07-p1-2-unix-socket.md  2026-07-promo-video.md  2026-07-settings-ui.md  2026-07-windows-port-survey.md  security-audit-report.md  tako-remote-plan.md
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-22T13-10-06-212Z.yml  page-2026-06-22T13-10-34-589Z.yml  page-2026-06-22T13-11-17-227Z.yml  page-2026-06-22T13-11-35-364Z.yml  page-2026-06-22T13-12-18-256Z.yml  page-2026-06-22T13-19-04-699Z.yml  page-2026-06-22T13-19-19-961Z.yml  page-2026-06-22T13-20-42-721Z.yml  page-2026-06-22T13-46-48-308Z.yml  page-2026-06-22T13-47-05-364Z.yml  page-2026-06-22T13-47-32-157Z.yml
.wrangler/cache/: pages.json  wrangler-account.json
assets/icon/: README.md
crates/tako-app/: Cargo.toml
crates/tako-app/src/: about_window.rs  autorename.rs  drawer.rs  file_icons.rs  filetree.rs  keybindings.rs  main.rs  overlays.rs  preview.rs  preview_render.rs  preview_watch.rs  remote_panel.rs  right_panel.rs  settings_window.rs  sidebar.rs  status_bar.rs  tab_bar.rs  ui_text.rs  update_checker.rs  video_player.rs  webview.rs
crates/tako-app/src/ui_text/: about.rs  common.rs  dialog.rs  drawer.rs  menu.rs  mod.rs  palette.rs  panel.rs  ports.rs  preview.rs  remote.rs  settings.rs  sidebar.rs  sleep_guard.rs  update.rs  webdock.rs
crates/tako-app/testdata/: mcp_tools_snapshot.txt
crates/tako-cli/: Cargo.toml
crates/tako-cli/src/: main.rs  setup.rs
crates/tako-control/: Cargo.toml
crates/tako-control/examples/: mcp_host.rs
crates/tako-control/src/: acceptance_gates.rs  agents.rs  agents_sync.rs  claude_tui.rs  config_io.rs  diag.rs  discovery.rs  dispatch.rs  fda.rs  host.rs  ipc.rs  layout.rs  lib.rs  mcp.rs  protocol.rs  remote.rs  remote_auth.rs  remote_setup.rs  sessions.rs  settings.rs  setup.rs  sleep_guard.rs  tailscale.rs  task_checkpoints.rs  telemetry.rs  transcript.rs
crates/tako-control/src/orchestrator/: agent.rs  default_system_prompt.md  ledger.rs  mod.rs  registry.rs  solo_system_prompt.md  supervisor.rs  wait.rs
crates/tako-control/tests/: claude_tui_e2e.rs
crates/tako-core/: Cargo.toml
crates/tako-core/shell-integration/: tako.bash  tako.fish  zshenv.zsh
crates/tako-core/src/: acceptance_gate.rs  byte_lru.rs  git.rs  header_layout.rs  i18n.rs  lib.rs  links.rs  osc_tap.rs  pane.rs  pane_log.rs  pane_tree.rs  paths.rs  pdf_links.rs  ports.rs  preview_cache.rs  preview_outline.rs  preview_reload.rs  preview_view.rs  recent.rs  runner.rs  screen.rs  scroll.rs  scroll_mirror.rs  shell.rs  shell_integration.rs  spawn_layout.rs  ssh_config.rs  tab.rs  task_checkpoint.rs  terminal.rs  text_edit.rs  theme.rs  tmux.rs  tmux_backend.rs  workspace.rs
design-ref/: support.js  tako-desktop.dc.html  tako-mobile.dc.html
design/claude-design/tako-ui/: README.md
design/claude-design/tako-ui/project/: .thumbnail  tako Desktop 改善版.dc.html  tako Desktop 現行.dc.html
design/takoremote-ui/: README.md
design/takoremote-ui/project/: .thumbnail  Tako Remote Chat UI.dc.html
distribution/: README.md  build-pkg.sh  distribution.xml  homebrew-cask-draft.rb
docs/: astro.config.mjs  orchestrator.md  package-lock.json  package.json  start-docs.command
docs/src/components/: SidebarHelp.astro
docs/src/content/docs/: index.mdx  releases.md
docs/src/content/docs/development/: architecture.md  building.md
docs/src/content/docs/features/: file-preview.md  git-integration.md  mcp-server.md  orchestration.md  orchestrator.md  port-detection.md  (+4 more)
docs/src/styles/: tako-theme.css
poc/: README.md
poc/01-gpui-window-crates/: Cargo.toml
poc/01-gpui-window-crates/src/: main.rs
poc/02-gpui-window-git/: Cargo.toml  rust-toolchain.toml
poc/02-gpui-window-git/src/: main.rs
poc/03-term-poc/: Cargo.toml  rust-toolchain.toml
poc/03-term-poc/src/: main.rs
resources/orchestrator/: judgment-defaults.md
resources/setup/: changes.yaml  system-prompt.md
resources/setup/templates/: config-default.yaml  instructions-default.md
resources/setup/templates/sections/: 00-language.md  01-interaction-style.md  02-git-workflow.md  03-code-quality.md  04-safety-rules.md  05-proposal-quality.md  06-completion-verification.md
reviews/: 2026-07-06_公開前セキュリティ監査.md  2026-07-06_構造・MCPリファクタ提案.md  2026-07-07_takoremote再監査.md  2026-07-07_オーケストレーション品質設計.md  2026-07-10_gpt5.6solレビュー.md  2026-07-10_tako-remote接続方式・認証設計.md
scripts/: build-app.sh  clean-target.sh  deploy-pages.sh  nightly-release.sh  release.sh  test-release-retry.sh  verify-claude-mcp.sh  verify-setup-multiagent.sh
scripts/promo/: build-video.sh  caption.swift  lib.sh  make-bgm.py  record-sample.sh  record-scenes.sh  winbounds.swift
web/tako-error-collector/: package.json  wrangler.toml
web/tako-error-collector/src/: index.js
web/tako-error-collector/test/: index.test.mjs
web/tako-remote/: .gitignore  index.html  package-lock.json  package.json  playwright.config.js  sw.js  vite.config.js
web/tako-remote-worker/: README.md  package-lock.json  package.json  wrangler.toml
web/tako-remote-worker/src/: index.js
web/tako-remote-worker/test/: smoke.test.mjs
web/tako-remote/e2e/: screenshots-5b.spec.js  screenshots.spec.js
web/tako-remote/public/: _redirects  manifest.json  sw.js
web/tako-remote/src/: ansi.js  api.js  app.jsx  main.jsx  store.js
web/tako-remote/src/components/: agent-icon.jsx  chat-view.jsx
web/tako-remote/src/pages/: connect.jsx  machines.jsx  pairing.jsx  panes.jsx  terminal.jsx
web/tako-remote/src/styles/: fonts.css  main.css
(+6 files in other folders)
