# tako ワークスペース。レイヤ構成は .agent/architecture.md を参照。
# 依存方向: tako-app(ui) → tako-control → tako-core → (platform は Phase 2 以降に分離検討)
[workspace]
resolver = "2"
members = ["crates/*"]
# poc/ は Phase 0 の使い捨て検証コード。各自が独立ワークスペースを持つ
exclude = ["poc"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/takushio2525/tako"

# 配布バンドル（scripts/build-app.sh）用のリリース最適化。
# thin LTO + 単一 codegen unit でサイズと速度を取り、シンボルは落とす（NFR-1〜3 / NFR-7）
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.dependencies]
tako-core = { path = "crates/tako-core" }
tako-control = { path = "crates/tako-control" }
alacritty_terminal = "0.26"
# PTY タップ（EventedReadWrite 委譲ラッパ）のトレイトシグネチャに必要。alacritty 経由で既にツリー内
polling = "3"
# PTY スレーブ名の取得（TIOCPTYGNAME。tmux 対応付け FR-2.13）。alacritty 経由で既にツリー内
libc = "0.2"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
# IPC / CLI のプロトコル定義（JSON-RPC 風）に使う
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TAKO_TOKEN 生成用の OS CSPRNG（FR-2.3.4。std に相当機能が無いため採用）
getrandom = "0.3"
# `tako` CLI の引数パーサ（デファクト標準）
clap = { version = "4", features = ["derive"] }
# 内蔵 MCP サーバーの Streamable HTTP トランスポート（FR-2.3）。
# 同期・スレッドベースの最小 HTTP サーバーで「tokio を持ち込まない」方針を維持する
# （公式 Rust SDK の rmcp は tokio 必須のため不採用。.agent/architecture.md「Layer 2」節）
tiny_http = "0.12"
# GPUI は zed リポの git rev 固定（自動更新しない。追従は意識的なタスク。.agent/architecture.md）
gpui = { git = "https://github.com/zed-industries/zed", rev = "cafbf4b5df7fedb67fc0f248850a5654efcec5d9" }
# font-kit feature 必須: 無いとテキストシステムがスタブ化し文字が一切描画されない（poc/README.md）
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "cafbf4b5df7fedb67fc0f248850a5654efcec5d9", features = ["font-kit"] }
