[package]
name = "tako-app"
description = "GPUI バイナリ（UI 層）。GPUI 依存はこのクレートだけに閉じ込める"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tako-app"
path = "src/main.rs"

[dependencies]
tako-core.workspace = true
tako-control.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
futures.workspace = true
# セルフテストでの MCP 応答解釈に使う
serde.workspace = true
serde_json.workspace = true
# プレビューペイン: コードハイライト（FR-3.2）と Markdown パース（FR-3.3）
syntect.workspace = true
pulldown-cmark.workspace = true
image.workspace = true
tungstenite.workspace = true
data-encoding.workspace = true
ureq.workspace = true
