[package]
name = "tako-app"
description = "GPUI バイナリ（UI 層）。GPUI 依存はこのクレートだけに閉じ込める"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tako-app"
path = "src/main.rs"

[features]
# Metal の描画結果を直接 RGBA へ読み戻す実画面ピクセル検証専用。
# 通常ビルドには test-support を含めない。
visual-test = ["gpui_platform/test-support"]

[dependencies]
tako-core.workspace = true
tako-control.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
futures.workspace = true
# セルフテストでの MCP 応答解釈に使う
serde.workspace = true
serde_json.workspace = true
# プレビューペイン: コードハイライト（FR-3.2）と Markdown パース（FR-3.3）
syntect.workspace = true
pulldown-cmark.workspace = true
image.workspace = true
# アプリ内更新の GitHub Releases チェック（update_checker）
ureq.workspace = true
# Web ビューペイン（FR-3.8）: OS ネイティブ webview の GPUI 子ビュー統合
wry.workspace = true
raw-window-handle.workspace = true
