[package]
name = "tako-cli"
description = "Layer 1 CLI（`tako` コマンド）。IPC サーバーへ JSON-RPC で接続する"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tako"
path = "src/main.rs"

[dependencies]
tako-control.workspace = true
clap.workspace = true
serde_json.workspace = true
