[package]
name = "tako-control"
description = "制御プレーン（IPC / MCP / パッシブ検知）。GPUI 非依存"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tako-core.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
getrandom.workspace = true
tiny_http.workspace = true
tungstenite.workspace = true
pathdiff.workspace = true
serde_yaml.workspace = true
qrcode.workspace = true
image.workspace = true
rust-embed.workspace = true
libc.workspace = true
ureq.workspace = true
