[package]
name = "gpui-window-git"
version = "0.1.0"
edition = "2021"
publish = false

# Phase 0 検証スパイク: zed リポジトリ git 依存版 gpui で最小ウィンドウが出るか
# （crates.io 0.2.2 との API 差・ビルド可否の比較用）
[dependencies]
# 破壊的変更が頻発するため rev 固定（2026-06-10 時点の main）。追従は意識的タスクとして行う
gpui = { git = "https://github.com/zed-industries/zed", rev = "cafbf4b5df7fedb67fc0f248850a5654efcec5d9" }
# zed main では Application 生成がプラットフォーム実装ごと gpui_platform に分離された。
# font-kit feature を有効にしないとテキストシステムがスタブになり文字が一切描画されない（ハマりどころ）
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "cafbf4b5df7fedb67fc0f248850a5654efcec5d9", features = ["font-kit"] }

[workspace]
